--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cadastro",
+  "name": "Sistema MINE",
   "short_name": "Cadastro",
   "start_url": "/cadastro/index.html",
   "scope": "/cadastro/",
